# prototypes

api-gw/: pyproject.toml
api-gw-apisix/: README.md
api-gw-apisix/src/: api_gateway.py  login_service.py  order_service.py  user_service.py
api-gw/src/api_gw/: api_gateway.py  login_service.py  user_service.py
caching_stampede_api_server/: README.md
caching_stampede_api_server/src/: app.py  cache.py  test_app.py
conn_pooling/: README.md  go.mod  main.go
db_proxy_mysql/: README.md  app.py
db_sharding_mysql/: README.md
flask_app/: README.md
flask_app/src/: app.py
leader_failover_etcd/: README.md  leader_failover.py
leader_failover_zookeeper/: README.md  leader_failover.py
load_balancer/: go.mod  lb.go
master_failover_zookeeper/: README.md  master_failover.py
master_replica_mysql/: README.md
mysql_master_replica/: README.md
